--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,7 +21,6 @@ Email:  support@getkirby.com
 		 url(../fonts/propcouriersans-regular-webfont.svg#propcouriersansregular) format('svg');
 	font-weight: normal;
 	font-style: normal;
-
 }
 @font-face {
 	font-family: 'Autopia';
@@ -257,7 +256,7 @@ blockquote {
 	padding: 0 30px;
 }
 .about p{
-	font-family: "Autopia";
+	/*font-family: "Autopia";*/
 	font-size: 2rem;
 	line-height: 1.35em;
 	color: #F00;
@@ -1379,26 +1378,25 @@ header#navbar .right ul.dropdown-menu{
 #viewer {
 	position: relative;
 	border-radius: 0;
-}
-#slider {
-    margin-bottom: 2.5rem;
+    margin-bottom: 3.5rem;
 }
 #bigSlider{
 
 }
-.swiper-container-horizontal > .swiper-pagination {
+.swiper-pagination {
 	text-align: left;
 	line-height: 10px;
-	bottom: 0rem;
-	top: auto;
     padding-top: 10px;
     background: #fff;
+    margin-top: 1px;
+    position: relative;
 }
 .swiper-pagination-bullet {
 	background: #D8D8D8 none repeat scroll 0% 0%;
 	opacity: 1;
     width: 10px;
     height: 10px;
+    margin: 0 5px;
 }
 .swiper-pagination-bullet-active {
 	opacity: 1;
@@ -1409,12 +1407,18 @@ header#navbar .right ul.dropdown-menu{
 	margin-left: auto;
 	margin-right: auto;
 	padding: 0;
+	position: relative;
+	padding-top: 75%;
+}
+.swiper-wrapper{
+	position: absolute;
+	top: 0;
 }
 .swiper-image {
 	background-size: contain;
 	background-position: center;
 	background-repeat: no-repeat;
-	height: 500px;
+	height: 100%;
 }
 .swiper-container:not(#bigSlider) figure{
 	background-color: #444; /* FFF7D0 */
@@ -1482,6 +1486,41 @@ header#navbar .right ul.dropdown-menu{
 #swiper-button-delete {
 
 }
+/* video player */
+.play{
+	position: absolute;
+    z-index: 9999;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+.playing > .play{
+	display: none; /* en fait c'est mieux de laisser la place au player */
+}
+.play .playButton{
+	position: absolute;
+    top: 50%;
+    margin-top: -100px;
+    left: 50%;
+    margin-left: -100px;
+    padding: 50px;
+    font-size: 60px;
+    line-height: 98px;
+    text-align: center;
+    cursor: pointer;
+}
+.play .playButton::before{
+    border-radius: 50%;
+    background: #aaa;
+    height: 100px;
+    width: 100px;
+    display: block;	
+    text-align: center;
+	padding-left: 11px;
+}
+
 
 /* File Upload */
 #uploadImages {
