--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1398,9 +1398,11 @@ header#navbar .right ul.dropdown-menu{
     padding-top: 10px;
     background: #fff;
     position: relative;
-    bottom: 0px;
-    left: 0px;
-    width: 100%;
+	bottom: -1px;
+	padding-bottom: 1px;
+	left: -1px;
+	right: -1px;
+	width: 101%;
 }
 .swiper-pagination-bullet {
 	background: #D8D8D8 none repeat scroll 0% 0%;
@@ -1434,7 +1436,7 @@ header#navbar .right ul.dropdown-menu{
 }
 .swiper-container:not(#bigSlider) figure{
 	background-color: #444; /* FFF7D0 */
-	padding-bottom: 20px;
+	padding-bottom: 19px;
 }
 #bigSlider figure{
 	height: 100vh;
