--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -163,7 +163,7 @@ body {
 	margin: 0 auto;
 	color: #222;
 	font-family: "propcouriersansregular", sans-serif;
-	background: rgb(242, 240, 234);
+	background: #F2F0ED;
 }
 main{
 	margin: 85px auto;
@@ -251,14 +251,27 @@ blockquote {
     border-left: 2px solid rgb(77,250,137);
     padding-left: 26px;
 }
-.about{
-	padding: 0 30px;
+#aboutButton{
+    width: 23px;
+    height: 23px;
+    border-radius: 50%;
+    line-height: 23px;
+    float: right;
+    padding: 0 !important;
+    margin: 9px 15px;
+    color: #fff;
+    background: #D1D1CE;
+    cursor: pointer;
 }
-.about p{
-	/*font-family: "Autopia";*/
-	font-size: 2rem;
-	line-height: 1.35em;
-	color: #F00;
+#about{
+	padding: 80px 20px;
+    width: 100%;
+    background: #FDFFE4;
+    z-index: 9999999999;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    height: 100%;
 }
 #logo{
     position: absolute;
@@ -281,13 +294,14 @@ header#navbar {
 header#navbar h4{
 	font-size: 1.5rem;
 }
+#annonces{
+	padding: 80px 0px;
+	border-top: 1px solid #D2D2D2;
+	min-height: 101%;
+}
 #cover{
-	height: 100vh;
-	padding-top: 42px;
-	background: #93CDFF;
+	height: 100%;
 	overflow: hidden;
-	margin-top: -40px;
-	margin-bottom: 5rem;
     background-size: cover !important;
     background-position: center center !important;
 }
@@ -423,13 +437,14 @@ header#navbar h4{
     filter: alpha(opacity = 0); /* Hack IE 5-7 */
 }
 #hide-menu{
-    position: absolute;
-    right: 0px;
-    width: 42px;
-    height: 42px;
+	width: 0;
+	height: 0;
+    padding: 0!important;
+    margin: 0;
+    top: 0;
+	float: right;
     text-align: center;
-	font-size: 1.2rem;
-	margin-right: 5px;
+   	font-size: 0;
     -webkit-transition: opacity 0.2s ease-in-out ;
     -moz-transition: opacity 0.2s ease-in-out ;
     -ms-transition: opacity 0.2s ease-in-out ;
@@ -481,7 +496,8 @@ header#navbar h4{
 	right: 0px;
 	width: 5px;
 }
-#megabloc .ps-container > .ps-scrollbar-y-rail > .ps-scrollbar-y{
+#megabloc .ps-container > .ps-scrollbar-y-rail > .ps-scrollbar-y,
+#about.ps-container > .ps-scrollbar-y-rail > .ps-scrollbar-y{
 	background-color: rgba(0, 0, 0, 0.2);
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
@@ -500,11 +516,11 @@ header#navbar h4{
 /* Homepage
 -------------------------------------------------- */
 
-
+/*
 #textAccueil {
     background: #FDFFE4;
     color: #444;
-    padding: 15px;
+    padding: 25px 15px;
     margin-bottom: 20px;
     overflow-y: auto;
     box-shadow: 0 0 15px rgba(0,0,0,.5);
@@ -513,7 +529,56 @@ header#navbar h4{
     min-height: 400px;
     max-height: 75vh;
     position: absolute;
-    margin: 5vh 45px;
+    top: 5%;
+    bottom: 5%;
+    margin: 0 45px;
+}
+#textAccueil h2{
+	font-size: 30px;
+	line-height: 1.2em;
+	margin-bottom: .75em ;
+}
+#textAccueil.closed{
+	width: 50px;
+	height: 50px;
+	top: 5%;
+	min-height: auto !important;
+	border-radius: 50%;
+	padding: 0;
+	font-size: 28px;
+	line-height: 52px;
+	text-align: center;
+	cursor: pointer;
+}
+#textAccueil.closed::before{
+	font-family: "Glyphicons Halflings";
+	content: "\e142";
+	opacity: .8;
+}
+#textAccueil.closed *{
+	display: none;
+}*/
+
+#about .closeButton{
+	position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 22px;
+    opacity: .85;
+    cursor: pointer;
+}
+#about.closed{
+	display: none;
+}
+#about .col-left{
+	float: left;
+    max-width: 47%;
+    margin: 0 30px 30px 0;
+    min-width: 400px;
+}
+#about h2{
+    margin-top: -17px;
+    margin-bottom: 15px;
 }
 #column-gauche.accueil{
 	width: 450px;
@@ -530,6 +595,8 @@ header#navbar h4{
     right: 0;
     padding: 15px;
     cursor: pointer;
+    font-size: 20px;
+    opacity: .8;
 }
 #wrapper-accueil{
 	width: 100%;
@@ -1084,6 +1151,16 @@ header#navbar .right ul.dropdown-menu{
 	.swiper-image{
 	    height: 300px !important;
 	}
+	.accueil .annonce-mini{
+		width: 100% !important;
+		position: relative !important;
+    	top: auto !important;
+	}
+	#textAccueil{
+		margin: 0;
+		margin-top: -2px;
+		max-height: calc(100vh - 42px);
+	}
 
 }
 @media screen and (max-width: 1000px ) {
@@ -1097,10 +1174,16 @@ header#navbar .right ul.dropdown-menu{
 		left:-100%;
 	}
 	#hide-menu{
+		font-size: 1.2rem;
+		margin-right: 5px;
+	    margin-left: -10px;
+	    width: 42px;
+	    height: 42px;
 		visibility: visible;
 	    -ms-filter: "prodig:DXImageTransform.Microsoft.Alpha(Opacity=100)"; /* Hack IE8 */
 	    filter: alpha(opacity = 100); /* Hack IE 5-7 */
 		opacity: 1;
+		padding: 11px !important;
 	}
 	.annonces-wrapper{
 		margin: auto;
@@ -1114,6 +1197,7 @@ header#navbar .right ul.dropdown-menu{
 -------------------------------------------------- */
 
 #liste-annonces{
+	max-width: 100%;
     width: 100%;
 }
 #liste-annonces .container-fluid {
@@ -1136,7 +1220,7 @@ header#navbar .right ul.dropdown-menu{
 #btn-new, .annonce-mini, article{
 	box-shadow: 0px 1px 1px rgba(0,0,0,.25);
 }
-.accueil #content>h2{
+.accueil #annonces>h2{
 	text-align: center;
 	font-size: 2rem;
 	color: #444;
@@ -1389,10 +1473,7 @@ header#navbar .right ul.dropdown-menu{
 	border-radius: 0;
     margin-bottom: 3.5rem;
 }
-#bigSlider{
-
-}
-.swiper-container-horizontal > .swiper-pagination {
+#slider > .swiper-pagination {
 	text-align: left;
 	line-height: 10px;
     padding-top: 10px;
@@ -1404,8 +1485,14 @@ header#navbar .right ul.dropdown-menu{
 	right: -1px;
 	width: 101%;
 }
+#home-slider > .swiper-pagination {
+	bottom: 16px;
+}
+#home-slider .swiper-button-black{
+	opacity: .5;
+}
 .swiper-pagination-bullet {
-	background: #D8D8D8 none repeat scroll 0% 0%;
+	background: #BCBBB4 none repeat scroll 0% 0%;
 	opacity: 1;
     width: 10px;
     height: 10px;
@@ -1414,6 +1501,9 @@ header#navbar .right ul.dropdown-menu{
 .swiper-pagination-bullet-active {
 	opacity: 1;
 	background: #777 none repeat scroll 0% 0%;
+}
+#home-slider {
+    height: 100%;
 }
 #slider {
 	width: 100%;
@@ -1424,7 +1514,7 @@ header#navbar .right ul.dropdown-menu{
 	padding-top: 75%;
 	margin-bottom: 16px;
 }
-.swiper-wrapper{
+#slider .swiper-wrapper{
 	position: absolute;
 	top: 0;
 }
@@ -1434,22 +1524,26 @@ header#navbar .right ul.dropdown-menu{
 	background-repeat: no-repeat;
 	height: 100%;
 }
-.swiper-container:not(#bigSlider) figure{
+#slider figure{
 	background-color: #444; /* FFF7D0 */
 	padding-bottom: 19px;
 }
-#bigSlider figure{
-	height: 100vh;
-	padding: 30px;
+#home-slider figure{
+	padding-bottom: 19px;
+}
+#home-slider figure{
+	height: 100%;
+	padding: 50px 0;
     text-align: center;
 }
-#bigSlider figure>img{
+#home-slider figure>img{
 	max-height: 100%;
     vertical-align: middle;
     display: inline-block;
     margin: 0 auto;
+    height: auto;
 }
-#bigSlider figure>.center{
+#home-slider figure>.center{
     display: inline-block;
     height: 100%;
     vertical-align: middle;
