--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -266,12 +266,19 @@ blockquote {
 #about{
 	padding: 80px 20px;
     width: 100%;
-    background: #FDFFE4;
     z-index: 9999999999;
     position: absolute;
     top: 0;
     bottom: 0;
     height: 100%;
+    -webkit-transition: opacity .15s ease-in-out;
+    -moz-transition: opacity .15s ease-in-out;
+    -o-transition: opacity .15s ease-in-out;
+    transition: opacity .15s ease-in-out;
+    opacity: 1;
+}
+#about.closed{
+	opacity: 0;
 }
 #logo{
     position: absolute;
